# VariadicStatements

./: LICENSE  README.md
cpp/: CMakeLists.txt  Connection.cpp  Connection.h  Result.cpp  Result.h  SQLException.cpp  SQLException.h  main.cpp
java/: Connection.java  Result.java
php/: Connection.php  Result.php
